--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     background-attachment:fixed;
     background-repeat: no-repeat;
     background-size: cover;
+    margin: 0;
+    font-family: arial;
 }
 
 .city-input {
