--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body{
     background-size: cover;
     margin: 0;
     font-family: arial;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 
@@ -90,29 +92,55 @@ body{
     height: 64px
 }
 
-.white-box {
-    position: absolute;
-    background-color: #FFFFFF;
-    color: white;
-    border-radius: 20px;
-    width: 900px;
-    height: 600px;
-    padding-top: 20px;
-    margin-top: 200px;
-    margin-left: 475px
-}
 
 #light-dark {
-    font-size: 15px;
-    border: none;
-    position: absolute;
-    cursor: pointer;
-    background-color: rgb(224, 213, 213);
-    border-radius: 30px;
+  font-size: 15px;
+  border: none;
+  position: absolute;
+  cursor: pointer;
+  background-color: rgb(224, 213, 213);
+  border-radius: 30px;
     padding: 2px 2px;
     margin-left: 50px;
     margin-bottom: 50px;
     bottom: 0;
     float: left;
     height: 64px
-} 
+  } 
+  
+#main-weather {
+  display: flex;
+}
+
+#weekly-weather {
+  display: flex
+}
+
+#white-box {
+    position: absolute;
+    border: black;
+    background-color: rgba(209, 203, 206, 0.8);
+    /* background-color: rgba(0, 0, 0, .25); */
+    border-radius: 20px;
+    padding: 20px;
+    /* width: 800px;
+    height: 50% px; */
+    width: 60%;
+    height: 60%;
+    /* padding-top: 20px; */
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.weekly-day-container {
+  display: flex;
+  flex-direction: column;
+  /* margin-right: 45px; */
+  margin: auto;
+  align-items: baseline;
+  justify-content: center;
+  margin-top: 80px;
+}
