--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ body{
   
 #main-weather {
   display: flex;
+  flex-direction: row;
+  margin: auto;
+  /* align-items: center; */
+  justify-content: space-evenly;
 }
 
 #weekly-weather {
@@ -141,11 +145,62 @@ body{
   margin: auto;
   align-items: baseline;
   align-items: center;
-  margin-top: 85px;
+  /* margin-top: 85px; */
 }
 
-#main-day-container {
+.main-day-container {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  align-items: baseline;
+  align-items: center;
+  position: relative;
+  top: 20px;
+  left: 20px;
+
+  /* left: 20px; */
+}
+
+#current-temperature {
+  font-size: 90px;
+  position:relative;
+  right: 5px;
+}
+
+#weather-photo{
+  width: 100px;
+  height: 100px;  
+  }
+
+ul { 
+  /* text-align: center;  */
+  /* list-style-type: none; */
+}
+
+#list-container {
+  position: relative;
+  bottom: 45px;
+  right: 5px;
+}
+
+li { 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+}  
+
+#city-name {
+  font-size: 50px;
+  position: relative;
+  bottom: 25px;
+  right: 20px;
+  text-align: center;
+  /* position: absolute;
+  top: 8px;
+  left: 16px;
+  font-size: 20px; */
+}
+
+#high-low, #date {
+  font-size: 20px;
 }
