--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ body{
     left: 0;
     right: 0;
     margin: auto;
+    font-family: 'Trebuchet MS', sans-serif;
 }
 
 .weekly-day-container {
@@ -204,3 +205,4 @@ li {
 #high-low, #date {
   font-size: 20px;
 }
+
