--- a/style.css
+++ b/style.css
@@ -126,11 +126,13 @@ body{
     background-color: rgba(209, 203, 206, 0.8);
     /* background-color: rgba(0, 0, 0, .25); */
     border-radius: 20px;
-    padding: 20px;
+    padding: 4%;
     /* width: 800px;
     height: 50% px; */
-    width: 60%;
-    height: 60%;
+    /* width: 60%;
+    height: 60%; */
+    width: 60vw; /* 60% of the viewport width */
+    height: 60vh; /* 60% of the viewport height */
     /* padding-top: 20px; */
     top:0;
     bottom: 0;
@@ -138,6 +140,7 @@ body{
     right: 0;
     margin: auto;
     font-family: 'Trebuchet MS', sans-serif;
+    font-size: 1vw;
 }
 
 .weekly-day-container {
@@ -155,42 +158,54 @@ body{
   align-items: baseline;
   align-items: center;
   position: relative;
-  top: 20px;
-  left: 20px;
+  /* top: 20px;
+  left: 20px; */
+  top: 1vw;
+  left: 1vw;
 
   /* left: 20px; */
 }
 
 #current-temperature {
-  font-size: 90px;
+  /* font-size: 90px; */
+  font-size: 8vw;
   position:relative;
-  right: 5px;
+  /* right: 5px; */
+  /* right: 2vw; */
 }
 
 #weather-photo{
-  width: 100px;
-  height: 100px;  
+  /* width: 100px;
+  height: 100px;   */
+  width: 10vw;
+  height: 10vw;  
   }
 
 
 #list-container {
   position: relative;
-  bottom: 45px;
-  right: 5px;
+  /* bottom: 45px;
+  right: 5px; */
+  bottom: 5vw;
+  /* right: 1vw; */
+  font-size: 1.25vw;
 }
 
 li { 
   list-style-type: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
+  margin-bottom: 1vw;
 }  
 
 #city-name {
-  font-size: 50px;
+  font-size: 4vw;
   position: relative;
-  bottom: 25px;
-  right: 20px;
+  /* bottom: 25px;
+  right: 20px; */
+  bottom: 4vw;
+  right: 2vw;
   text-align: center;
   /* position: absolute;
   top: 8px;
@@ -199,6 +214,6 @@ li {
 }
 
 #high-low, #date {
-  font-size: 20px;
+  font-size: 2vw;
 }
 
