added toggle switch and error button

--- a/style.css
+++ b/style.css
@@ -1,21 +1,32 @@
-body{
-    background-image:url("images/gorgeous-clouds-background-with-blue-sky-design_1017-25501.jpg");
-    /* background-image:url("/Users/aaronlevy/Downloads/hand-drawn-flat-winter-solstice-background_23-2149171229.jpg"); */
-    background-attachment:fixed;
+body {
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 0;
-    font-family: arial;
-    max-width: 100%;
-    overflow: hidden;
 }
 
+.error-button {
+    color: red;
+    background-color: white;
+    border-radius: 50%;
+    padding: 5px; 
+    display: inline-block; 
+    width: 50px; 
+    height: 50px; 
+    line-height: 25px; 
+    border: 2px solid white; 
+    cursor: pointer;
+    font-size: 30px;
+    font-weight: bold;
+    position: absolute; 
+    left: 30px; 
+    top: 20px; 
+} 
 
 .open-button {
     background-color: #555;
     color: white;
     padding: 16px 20px;
-    border: none;
+    border-radius: 50%;
     cursor: pointer;
     opacity: 0.8;
     position: fixed;
@@ -23,7 +34,7 @@ body{
     right: 28px;
     width: 280px;
   }
-  
+
   /* The popup form - hidden by default */
   #myForm {
     display: none;
@@ -64,34 +75,24 @@ body{
     border: none;
     cursor: pointer;
     width: 100%;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     opacity: 0.8;
   }
 
-  /*  Set a style for city search input */
 .city-input {
     font-size: 20px;
+    background-color: white;
     border: none;
     cursor: text;
     border-radius: 35px;
-    margin-right: 30px;
+    margin-right: 35px;
     padding: 2px 30px 2px 120px;
     float: right;
     height: 40px;
+    position: absolute; 
+    right: 30px; 
+    top: 30px; 
 }
-
-/* .report-button {
-    font-size: 20px;
-    border: none;
-    cursor: pointer;
-    background-color: rgb(224, 213, 213);
-    border-radius: 35px;
-    padding: 2px 23px 2px 30px;
-    margin-right: 50px;
-    margin-top: 50px;
-    float: right;
-    height: 64px */
-
 
 #light-dark {
   font-size: 15px;
@@ -170,8 +171,7 @@ body{
 #weather-photo{
   width: 100px;
   height: 100px;  
-  }
-
+}
 
 #list-container {
   position: relative;
@@ -202,3 +202,72 @@ li {
   font-size: 20px;
 }
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input[type="checkbox"] {
+        opacity: 0; 
+}
+  
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #0000;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #0000;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.switch {
+    position: absolute; 
+    left: 30px; 
+    bottom: 30px; 
+}
