--- a/style.css
+++ b/style.css
@@ -1,18 +1,32 @@
-body{
-    background-image:url('images/gorgeous-clouds-background-with-blue-sky-design_1017-25501.jpg');
-    background-attachment:fixed;
+body {
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 0;
-    font-family: arial;
 }
 
+.error-button {
+    color: red;
+    background-color: white;
+    border-radius: 50%;
+    padding: 5px; 
+    display: inline-block; 
+    width: 50px; 
+    height: 50px; 
+    line-height: 25px; 
+    border: 2px solid white; 
+    cursor: pointer;
+    font-size: 30px;
+    font-weight: bold;
+    position: absolute; 
+    left: 30px; 
+    top: 20px; 
+} 
 
 .open-button {
     background-color: #555;
     color: white;
     padding: 16px 20px;
-    border: none;
+    border-radius: 50%;
     cursor: pointer;
     opacity: 0.8;
     position: fixed;
@@ -20,7 +34,7 @@ body{
     right: 28px;
     width: 280px;
   }
-  
+
   /* The popup form - hidden by default */
   #myForm {
     display: none;
@@ -61,57 +75,199 @@ body{
     border: none;
     cursor: pointer;
     width: 100%;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     opacity: 0.8;
   }
 
-  /*  Set a style for city search input */
 .city-input {
     font-size: 20px;
+    background-color: white;
     border: none;
     cursor: text;
     border-radius: 35px;
-    margin-right: 30px;
+    margin-right: 35px;
     padding: 2px 30px 2px 120px;
     float: right;
     height: 40px;
-}
-
-/* .report-button {
-    font-size: 20px;
-    border: none;
-    cursor: pointer;
-    background-color: rgb(224, 213, 213);
-    border-radius: 35px;
-    padding: 2px 23px 2px 30px;
-    margin-right: 50px;
-    margin-top: 50px;
-    float: right;
-    height: 64px */
-
-.white-box {
-    position: absolute;
-    background-color: #FFFFFF;
-    color: white;
-    border-radius: 20px;
-    width: 900px;
-    height: 600px;
-    padding-top: 20px;
-    margin-top: 200px;
-    margin-left: 475px
+    position: absolute; 
+    right: 30px; 
+    top: 30px; 
 }
 
 #light-dark {
-    font-size: 15px;
-    border: none;
-    position: absolute;
-    cursor: pointer;
-    background-color: rgb(224, 213, 213);
-    border-radius: 30px;
+  font-size: 15px;
+  border: none;
+  position: absolute;
+  cursor: pointer;
+  background-color: rgb(224, 213, 213);
+  border-radius: 30px;
     padding: 2px 2px;
     margin-left: 50px;
     margin-bottom: 50px;
     bottom: 0;
     float: left;
     height: 64px
-} 
+  } 
+  
+#main-weather {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  /* align-items: center; */
+  justify-content: space-evenly;
+}
+
+#weekly-weather {
+  display: flex
+}
+
+#white-box {
+    position: absolute;
+    border: black;
+    background-color: rgba(209, 203, 206, 0.8);
+    /* background-color: rgba(0, 0, 0, .25); */
+    border-radius: 20px;
+    padding: 20px;
+    /* width: 800px;
+    height: 50% px; */
+    width: 60%;
+    height: 60%;
+    /* padding-top: 20px; */
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    font-family: 'Trebuchet MS', sans-serif;
+}
+
+.weekly-day-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  align-items: baseline;
+  align-items: center;
+  /* margin-top: 85px; */
+}
+
+.main-day-container {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  align-items: center;
+  position: relative;
+  top: 20px;
+  left: 20px;
+
+  /* left: 20px; */
+}
+
+#current-temperature {
+  font-size: 90px;
+  position:relative;
+  right: 5px;
+}
+
+#weather-photo{
+  width: 100px;
+  height: 100px;  
+}
+
+#list-container {
+  position: relative;
+  bottom: 45px;
+  right: 5px;
+}
+
+li { 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+}  
+
+#city-name {
+  font-size: 50px;
+  position: relative;
+  bottom: 25px;
+  right: 20px;
+  text-align: center;
+  /* position: absolute;
+  top: 8px;
+  left: 16px;
+  font-size: 20px; */
+}
+
+#high-low, #date {
+  font-size: 20px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input[type="checkbox"] {
+        opacity: 0; 
+}
+  
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #0000;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #0000;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.switch {
+    position: absolute; 
+    left: 30px; 
+    bottom: 30px; 
+}
