--- a/style.css
+++ b/style.css
@@ -14,13 +14,6 @@ body {
 .switch input[type="checkbox"] {
         opacity: 0; 
 }
-  
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
 
 .slider {
     position: absolute;
@@ -88,27 +81,8 @@ input:checked + .slider:before {
     font-size: 30px;
     font-weight: bold;
     position: absolute; 
-    left: 30px; 
-    top: 20px; 
-} 
-
-
-.error-button {
-    color: red;
-    background-color: white;
-    border-radius: 50%;
-    padding: 5px; 
-    display: inline-block; 
-    width: 50px; 
-    height: 50px; 
-    line-height: 25px; 
-    border: 2px solid white; 
-    cursor: pointer;
-    font-size: 30px;
-    font-weight: bold;
-    position: absolute; 
-    left: 30px; 
-    top: 20px; 
+    left: 1%; 
+    top: 2%; 
 } 
 
 .open-button {
@@ -182,8 +156,8 @@ input:checked + .slider:before {
     right: 30px; 
     top: 30px; 
     position: absolute; 
-    right: 30px; 
-    top: 30px; 
+    right: 3%; 
+    top: 3%; 
 }
 
 #light-dark {
@@ -292,74 +266,4 @@ li {
 
 #high-low, #date {
   font-size: 20px;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input[type="checkbox"] {
-      opacity: 0; 
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #0000;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #0000;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-.switch {
-  position: absolute; 
-  left: 30px; 
-  bottom: 30px; 
 }
