--- a/style.css
+++ b/style.css
@@ -130,6 +130,8 @@ body {
       margin: auto;
       font-family: 'Trebuchet MS', sans-serif;
       font-size: 1vw;
+      display: flex;
+      flex-direction: column;
   }
 
 #main-weather {
@@ -140,14 +142,18 @@ body {
   justify-content: space-evenly;
   width: 60vw;
   height: 30vh; 
+  flex: 1;
+  margin-bottom: 5%;
 }
 
 #weekly-weather {
+  flex: 2;
   display: flex;
   height: 50vh; 
   width: 60vw;
   /* align-items: center; */
   position: relative;
+  margin-top: 5%;
 }
 
 
