--- a/style.css
+++ b/style.css
@@ -140,8 +140,8 @@ body {
   margin: auto;
   /* align-items: center; */
   justify-content: space-evenly;
-  width: 60vw;
-  height: 30vh; 
+  width: 100%;
+  height: 50%; 
   flex: 1;
   margin-bottom: 5%;
 }
@@ -149,8 +149,8 @@ body {
 #weekly-weather {
   flex: 2;
   display: flex;
-  height: 50vh; 
-  width: 60vw;
+  height: 50%; 
+  width: 100%;
   /* align-items: center; */
   position: relative;
   margin-top: 5%;
