--- a/style.css
+++ b/style.css
@@ -235,21 +235,22 @@ input:checked + .slider:before {
   align-items: baseline;
   align-items: center;
   position: relative;
-  top: 20px;
-  left: 20px;
+  top: 3vw;
+  /* left: 1vw; */
 
   /* left: 20px; */
 }
 
 #current-temperature {
-  font-size: 90px;
+  font-size: 6vw;
   position:relative;
-  right: 5px;
+  /* right: 5vw; */
+
 }
 
 #weather-photo{
-  width: 100px;
-  height: 100px;  
+  width: 10vw; 
+  height: 10vw;
 }
 
 #list-container {
@@ -270,10 +271,10 @@ li {
 }  
 
 #city-name {
-  font-size: 50px;
+  font-size: 4.5vw;
   position: relative;
-  bottom: 25px;
-  right: 20px;
+  bottom: 35%;
+  right: 3vw;
   text-align: center;
   /* position: absolute;
   top: 8px;
@@ -281,6 +282,10 @@ li {
   font-size: 20px; */
 }
 
-#high-low, #date {
-  font-size: 20px;
+#date {
+  font-size: 2vw; 
+}
+
+#high-low {
+  font-size: 1.5vw;
 }
